--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-ui-toolkit (1.3.2191+gemian) stretch; urgency=medium
+
+  * Imported to Gemian from UBPorts and updated to work with Qt5.7.1
+
+-- Adam Boardman <adamboardman@gmail.com> Fri, 09 Feb 2018 14:56:42 +0100
+
 ubuntu-ui-toolkit (1.3.2191+ubports) xenial; urgency=medium
 
   * Imported to UBports
