--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ubuntu-ui-toolkit (1.3.2191+gemian) stretch; urgency=medium
+ubuntu-ui-toolkit (1.3.2191+gemian) buster; urgency=medium
 
-  * Imported to Gemian from UBPorts and updated to work with Qt5.7.1
+  * Imported to Gemian from UBPorts
 
--- Adam Boardman <adamboardman@gmail.com> Fri, 09 Feb 2018 14:56:42 +0100
+ -- Adam Boardman <adamboardman@gmail.com> Fri, 09 Feb 2018 14:56:42 +0100
 
 ubuntu-ui-toolkit (1.3.2191+ubports) xenial; urgency=medium
 
@@ -5985,3 +5985,4 @@ ubuntu-ui-toolkit (0.1.36-0ubuntu1) raring; urgency=low
   * Initial release
 
  -- Timo Jyrinki <timo-jyrinki@ubuntu.com>  Tue, 26 Feb 2013 09:52:05 +0200
+ 
